--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <p>
                             
                         </p>
-                        <a href="#">Resume</a>
+                        <a href="https://drive.google.com/file/d/14CT3lj5xpzB80lYzw39fEhKAh8QKsPxh/view?usp=sharing">Resume</a>
                     </div>
                 </div>
 
