--- a/index.html
+++ b/index.html
@@ -573,8 +573,8 @@
         <div class="footer">
             <div class="container">
                 <div class="copyright">
-                    <p>&copy; Copyright <a href="https://htmlcodex rk.com">2024 Rk Softweb Solutions</a>. All Rights Reserved</p>
-                    <p>Powered by <a href="https://htmlcodex.com">Rameshkumar R</a></p>
+                    <p>&copy; Copyright <a href="">2024 Rk Softweb Solutions</a>. All Rights Reserved</p>
+                    <p>Powered by <a href="">Rameshkumar R</a></p>
                 </div>
             </div>
         </div>
