--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                         <div class="contact-info">
                             <p><i class="fa fa-user"></i>RAMESHKUMAR R</p>
                             <p><i class="fa fa-tag"></i>Designer|Software Testing|Data Analyst</p>
-                            <p><i class="fa fa-map-marker"></i>North St, Unathur(Po), Thalaivasal(Tk), Salem(Dt), Tamilnadu - 636112</p>
+                            <p><i class="fa fa-map-marker"></i>North St, Unathu, Thalaivasal(Tk), Salem(Dt), Tamilnadu - 636112</p>
                             <p><i class="fa fa-envelope"></i><a href="#rk7ramesh2580@gmail.com">rk7ramesh2580@gmail.com</a></p>
                             <p><i class="fa fa-phone"></i><a href="#+91 9345809189">+91 9345809189</a></p>
                             <div class="social">
