--- a/index.html
+++ b/index.html
@@ -484,30 +484,27 @@
                 <i class="fa fa-4x fa-quote-left"></i>
                 <div class="owl-carousel testimonials-carousel">
                     <div class="testimonial-item">
-                        <img src="img/testimonial-1.jpg" class="testimonial-img" alt="">
-                        <h3>Gunal K</h3>
+                        <img src="" class="testimonial-img" alt="">
+                        <h3>UI/UX Designer</h3>
                         <h4>Data Scientiest</h4>
                         <p>
-                            "a Data Scientist at AvaSoft, inspired me throughout my college days, consistently imparting valuable lessons on learning strategies and navigating critical situations. His guidance has been instrumental in shaping my approach to problem-solving and instilling a resilience that proves invaluable in the dynamic field of data science."
-                        </p>
+                     </p>
                     </div>
 
                     <div class="testimonial-item">
-                        <img src="img/testimonial-2.jpg" class="testimonial-img" alt="">
-                        <h3>Naveen S</h3>
-                        <h4>Data Scientiest</h4>
+                        <img src="" class="testimonial-img" alt="">
+                        <h3>Software testing</h3>
+                        <h4></h4>
                         <p>
-                            "He is like a partner to me. Whenever we are assigned projects, we form a cohesive team and consistently complete every project well before the deadline. Throughout our college days, he has been my constant companion, not just in academic situations but in every aspect of study and beyond."
-                        </p>
+                             </p>
                     </div>
 
                     <div class="testimonial-item">
-                        <img src="img/testimonial-3.jpg" class="testimonial-img" alt="">
-                        <h3>Thangamani S</h3>
-                        <h4>Data Analyst</h4>
+                        <img src="" class="testimonial-img" alt="">
+                        <h3>Data analyst</h3>
+                        <h4></h4>
                         <p>
-                             He is also, Whenever we are assigned projects, we form a cohesive team and consistently complete every project well before the deadline. Throughout our college days, he has been my constant companion, not just in academic situations but in every aspect of study and beyond."
-                        </p>
+                                  </p>
                     </div>
                 </div>
             </div>
@@ -530,7 +527,7 @@
                         <div class="contact-info">
                             <p><i class="fa fa-user"></i>RAMESHKUMAR R</p>
                             <p><i class="fa fa-tag"></i>Designer|Software Testing|Data Analyst</p>
-                            <p><i class="fa fa-map-marker"></i>North St, Unathu, Thalaivasal(Tk), Salem(Dt), Tamilnadu - 636112</p>
+                            <p><i class="fa fa-map-marker"></i>North St, Unathur , Thalaivasal(Tk), Salem(Dt), Tamilnadu - 636112</p>
                             <p><i class="fa fa-envelope"></i><a href="#rk7ramesh2580@gmail.com">rk7ramesh2580@gmail.com</a></p>
                             <p><i class="fa fa-phone"></i><a href="#+91 9345809189">+91 9345809189</a></p>
                             <div class="social">
