--- a/index.html
+++ b/index.html
@@ -492,8 +492,8 @@
                     </div>
 
                     <div class="testimonial-item">
-                        <img src="" class="testimonial-img" alt="">
-                        <h3>Software testing</h3>
+                        <img src="img/testimonial-2.jpg" class="testimonial-img" alt="">
+                        <h3>Freelancer</h3>
                         <h4></h4>
                         <p>
                              </p>
